--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div>This is where we can Pushing data through data layer</div>
     <button id="python">Python</button>
     <script>
-    document.getElementById("purchase").addEventListener("click", function () {
-        gtag("event", "purchase", {
+    document.getElementById("python").addEventListener("click", function () {
+        gtag("event", "python", {
                 // This purchase event uses a different transaction ID
                 // from the previous purchase event so Analytics
                 // doesn't deduplicate the events.
