--- a/index.html
+++ b/index.html
@@ -70,38 +70,45 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div>This is where we can Pushing data through data layer</div>
     <button id="python">Python</button>
     <script>
-    document.getElementById("python").addEventListener("click", function () {
-        gtag("event", "python", {
-                // This purchase event uses a different transaction ID
-                // from the previous purchase event so Analytics
-                // doesn't deduplicate the events.
-                // Learn more: https://support.google.com/analytics/answer/12313109
-                transaction_id: "T_12345_2",
-                value: 25.42,
-                tax: 4.90,
-                shipping: 5.99,
-                currency: "USD",
-                coupon: "SUMMER_SALE",
-                items: [
-                {
-                   item_id: "ITM_12345",
-                   item_name: "Python",
-                   affiliation: "online_Course",
-                   currency: "INR",
-                   discount: 100,
-                   item_brand: "MOOC",
-                   item_category: "Python",
-                   item_category2: "ML",
-                   item_category3: "DS",
-                   item_category4: "CS",
-                   item_variant: "Online",
-                   location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
-                   price: 5000,
-                   quantity: 1
+    // Create a new object with the item data
+const itemData = {
+  item_id: "ITM_12345",
+  item_name: "Python",
+  affiliation: "online_Course",
+  currency: "INR",
+  discount: 100,
+  item_brand: "MOOC",
+  item_category: "Python",
+  item_category2: "ML",
+  item_category3: "DS",
+  item_category4: "CS",
+  item_variant: "Online",
+  location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
+  price: 5000,
+  quantity: 1
+};
 
-                }]
-          });
-      });
+// Push the item data to the data layer
+dataLayer.push({
+  event: "addToCart",
+  ecommerce: {
+    currencyCode: itemData.currency,
+    add: {
+      products: [
+        {
+          id: itemData.item_id,
+          name: itemData.item_name,
+          category: itemData.item_category,
+          variant: itemData.item_variant,
+          brand: itemData.item_brand,
+          price: itemData.price,
+          quantity: itemData.quantity
+        }
+      ]
+    }
+  }
+});
+
     </script>
       
       
